--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^5.1.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
